syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.xiaofu";
option java_outer_classname = "DemoServiceProto";
// The greeting service definition.
service DemoService {
    // Sends a greeting
    rpc service (RequestData) returns (ResponseData) {}
}
// The request message containing the user's name.
message RequestData {
    string name = 1;
}
// The response message containing the greetings
message ResponseData {
    string message = 1;
}
